@@ -2,6 +2,7 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - better normalization of uris in errors
+          - now detecting infinite loops separately from deep traversal
 
 0.010     2020-07-23 16:50:18Z
           - fixed error generation for validator keywords with numeric
